--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <div class="container">
 <div class ="container title">
   <h1>
-    Welcome to {{ title }}
+    {{ title }}
   </h1>
   
 </div>
@@ -13,7 +13,7 @@
    <div class="row">
     
     <ul class="nav nav-pills">
-        <li routerLinkActive="active"><a routerLink="/viewall">View All</a></li> &nbsp;&nbsp;&nbsp;
+        <li routerLinkActive="active"><a routerLink="/workouts">View All</a></li> &nbsp;&nbsp;&nbsp;
         <li routerLinkActive="active"><a routerLink="/create">Create</a></li> &nbsp;&nbsp;&nbsp;
        <li routerLinkActive="active"><a routerLink="/category">Category</a></li> &nbsp;&nbsp;&nbsp;
       <li routerLinkActive="active"><a routerLink="/track">Track</a></li>
