--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,3 @@
 <div class="ctslogo" style="height:50px">
- <a [routerLink]="['../workouthome']"><img width="100" src="assets/cognizant-logo.png"></a>
+ <a [routerLink]="['../workouts']"><img width="100" src="assets/cognizant-logo.png"></a>
 </div>
