--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -1,3 +1,60 @@
-<p>
-  start works!
-</p>
+<div class="container">
+   <div style="padding-top:20px">
+       <h4>Start Workout</h4>
+   </div>
+   <div style="padding-top:10px">
+        <form [formGroup]="startForm">
+                
+                    <div class="form-group">
+                
+                      <div class="row">
+                        <div class="col-lg-2">
+                            <label for="title">Title:</label>
+                        </div>
+                        <div class="col-lg-3">
+                    <input type="text" readonly style="width:100%" class="form-contorl" [ngModel]="workout.title" id="title">
+                        </div>
+                      </div>
+                <br>
+                      <div class="row">
+                          <div class="col-lg-2">
+                              <label for="note">Note:</label>
+                          </div>
+                          <div class="col-lg-3">
+                      <textarea type="text" style="width: 100%;height: 126%;" readonly class="form-contorl" [ngModel]="workout.note" id="note"></textarea>
+                          </div>
+                        </div>
+                <br>
+                        <div class="row">
+                            <div class="col-lg-2">
+                                <label for="start_date">Start Date:</label>
+                            </div>
+                            <div class="col-lg-3">
+                        <input type="date" [value]="start_date" name="start_date" class="form-contorl" formControlName="start_date" id="start_date" >
+                            </div>
+                          </div>
+                <br>
+                          <div class="row">
+                            <div class="col-lg-2">
+                                <label for="start_time">Start Time</label>
+                            </div>
+                            <div class="col-lg-3">
+                    <input type="time" class="form-control" formControlName="start_time" >
+                            </div>
+                          </div>
+                <br>
+                          <div class="row">
+                            <div class="col-lg-3">
+                              <button class="btn btn-success" (click)="start()" type="submit">Start</button>
+                            </div>
+                            <div class="col-lg-2">
+                              <button type="submit" class="btn btn-default" (click)="cancel()">Cancel</button>
+                            </div>
+                          </div>
+                    </div>
+                   </form>
+
+
+   </div>
+   
+</div>
