--- a/src/app/stop/stop.component.html
+++ b/src/app/stop/stop.component.html
@@ -1,3 +1,61 @@
-<p>
-  stop works!
-</p>
+<div class="container">
+    <div style="padding-top:20px">
+        <h4>End Workout</h4>
+    </div>
+    <div style="padding-top:10px">
+         <form [formGroup]="endForm">
+                 
+                     <div class="form-group">
+                 
+                       <div class="row">
+                         <div class="col-lg-2">
+                             <label for="title">Title:</label>
+                         </div>
+                         <div class="col-lg-3">
+                     <input type="text" readonly style="width:100%" class="form-contorl" [ngModel]="workout.title" id="title">
+                         </div>
+                       </div>
+                 <br>
+                       <div class="row">
+                           <div class="col-lg-2">
+                               <label for="note">Note:</label>
+                           </div>
+                           <div class="col-lg-3">
+                       <textarea type="text" style="width: 100%;height: 126%;" readonly class="form-contorl" [ngModel]="workout.note" id="note"></textarea>
+                           </div>
+                         </div>
+                 <br>
+                         <div class="row">
+                             <div class="col-lg-2">
+                                 <label for="end_date">End Date:</label>
+                             </div>
+                             <div class="col-lg-3">
+                         <input type="date" [value]="end_date" name="start_date" class="form-contorl" formControlName="start_date" id="end_date" >
+                             </div>
+                           </div>
+                 <br>
+                           <div class="row">
+                             <div class="col-lg-2">
+                                 <label for="end_time">End Time</label>
+                             </div>
+                             <div class="col-lg-3">
+                     <input type="time" class="form-control" formControlName="end_time" id="end_time" >
+                             </div>
+                           </div>
+                 <br>
+                           <div class="row">
+                             <div class="col-lg-3">
+                               <button class="btn btn-success" (click)="end()" type="submit">End</button>
+                             </div>
+                             <div class="col-lg-2">
+                               <button type="submit" class="btn btn-default" (click)="cancel()">Cancel</button>
+                             </div>
+                           </div>
+                     </div>
+                    </form>
+ 
+ 
+    </div>
+    
+ </div>
+ 
