--- a/src/app/workouthome/workouthome.component.html
+++ b/src/app/workouthome/workouthome.component.html
@@ -1,3 +1,41 @@
-<p>
-  workouthome works!
-</p>
+<div class="container" style="padding-top:20px">
+  <div class="row">
+    <div class="col-lg-4">
+      
+      <input class="form-control font" #box (keyup.enter)="getworkouts(box.value)"  type="text" [(ngModel)]= "value"  name="value" placeholder="Search WorkOut"/>
+    </div>
+    <div class="col-lg-1">
+      <img  style="cursor: pointer;width:80%;margin-left: -135%;" (click)="getworkouts(value)" class="searchicon" src="assets/search.png">
+   </div>
+  </div>
+  <div class="borderarea" *ngFor="let workout of workoutList|filter:value">
+      <div class="display"  >
+          <div class="row">
+              <div class="col-lg-4">
+                
+                <input type="text" style="width:100%" readonly [(ngModel)]="workout.title" name="" id="">
+              </div>
+             
+            </div>
+            <div class="row" style="padding-top:5px">
+                    <div class="col-lg-1">
+                        <button class="btn btn-primary" (click) ="editworkout(workout)" >Edit</button>
+                          </div>
+                          <div class="col-lg-1">
+                            <button class="btn btn-warning"(click)="deleteworkout(workout)">Delete</button>
+                          </div>
+                          <div class="col-lg-1">
+                            <button class="btn btn-success" (click)="start(workout)">Start</button>
+                          </div>
+                          <div class="col-lg-1">
+                            <button class="btn btn-default" (click)="end(workout)">End</button>
+                          </div>
+            
+            </div>
+       </div>
+       <br>
+  </div>
+  
+      
+ </div>
+
