--- a/src/app/addworkout/addworkout.component.html
+++ b/src/app/addworkout/addworkout.component.html
@@ -19,10 +19,10 @@
       <br>
       <div class="row">
           <div class="col-lg-1">
-            <label for="Note">Note:</label>
+            <label for="note">Note:</label>
           </div>
           <div class="col-lg-4">
-            <textarea type="text" class="form-control" formControlName="note" id="Title">
+            <textarea type="text" class="form-control" formControlName="note" id="note">
             </textarea>
             <span *ngIf="!workoutForm.get('note').valid && workoutForm.get('note').touched"
             class="help-block" style="color:red"> Please Enter Notes  (Minimum 5 Characters)</span>
@@ -32,11 +32,11 @@
         <div class="row">
 
           <div class="col-lg-3">
-            <label for="CBM">Calories Burnt Per Min</label>
+            <label for="cbm">Calories Burnt Per Min</label>
           </div>
           <div class="col-lg-2 ">
-              <input type="number" class="form-control" step=0.1 formControlName="CBM" id="CBM">
-              <span *ngIf="!workoutForm.get('CBM').valid && workoutForm.get('CBM').touched " class="help-block" style="color:red">
+              <input type="number" class="form-control" step=0.1 formControlName="cbm" id="cbm">
+              <span *ngIf="!workoutForm.get('cbm').valid && workoutForm.get('cbm').touched " class="help-block" style="color:red">
                  Please Enter Calories   (Greater than 0.1)</span>
           </div>
        
@@ -48,11 +48,11 @@
             <label for="category">Category:</label>
           </div>
           <div class="col-lg-4">
-            <select class="form-control" formControlName="catergoy_id" >
-             <option *ngFor="let category of categoryList" [ngValue]="catergoy_id">
-               {{category.categoryname}}
+            <select class="form-control" formControlName="categoryId" >
+             <option *ngFor="let category of categoryList" [ngValue]="category.categoryId">
+               {{category.categoryName}}
              </option> 
-             <span *ngIf="!workoutForm.get('catergoy_id').valid && workoutForm.get('catergoy_id').touched " class="help-block" style="color:red">
+             <span *ngIf="!workoutForm.get('categoryId').valid && workoutForm.get('categoryId').touched " class="help-block" style="color:red">
                 Please Select category</span>
                          </select>
                         
@@ -62,7 +62,7 @@
             
         <div class="row">
             <div class="col-lg-3" style="padding-left:4%">
-                <button style="width:90%" class="btn btn-success btn-lg "  type="submit"  [disabled]="!workoutForm.get('title').valid || !workoutForm.get('CBM').valid  || !workoutForm.get('note').valid" >
+                <button style="width:90%" class="btn btn-success btn-lg "  type="submit"  [disabled]="!workoutForm.get('title').valid || !workoutForm.get('cbm').valid  || !workoutForm.get('note').valid" >
                    Add WorkOut
                    
                   </button>&nbsp;
