--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -10,7 +10,7 @@
  
        <div class="row">
          <div class="col-lg-1"><label for="title">Title:</label></div>
-         <div class="col-lg-4"><input [value]=workout.title type="text" class="form-control" formControlName="title" id="title">
+         <div class="col-lg-4"><input [(ngModel)]=workout.title type="text" class="form-control" formControlName="title" id="title">
            <span *ngIf="!workoutForm.get('title').valid && workoutForm.get('title').touched"
            class="help-block" style="color:red"> Please Enter Title Name (Minimum 5 Characters)</span>
          </div>
@@ -22,7 +22,7 @@
              <label for="Note">Note:</label>
            </div>
            <div class="col-lg-4">
-             <textarea type="text" [value]=workout.note class="form-control" formControlName="note" id="Title">
+             <textarea type="text" [(ngModel)]=workout.note class="form-control" formControlName="note" id="Title">
              </textarea>
              <span *ngIf="!workoutForm.get('note').valid && workoutForm.get('note').touched"
              class="help-block" style="color:red"> Please Enter Notes  (Minimum 5 Characters)</span>
@@ -32,11 +32,11 @@
          <div class="row">
  
            <div class="col-lg-3">
-             <label for="CBM">Calories Burnt Per Min</label>
+             <label for="cbm">Calories Burnt Per Min</label>
            </div>
            <div class="col-lg-2 ">
-               <input type="number" [value]=workout.CBM class="form-control" step=0.1 formControlName="CBM" id="CBM">
-               <span *ngIf="!workoutForm.get('CBM').valid && workoutForm.get('CBM').touched " class="help-block" style="color:red">
+               <input type="number" [(ngModel)]=workout.cbm class="form-control" step=0.1 formControlName="cbm" id="cbm">
+               <span *ngIf="!workoutForm.get('cbm').valid && workoutForm.get('cbm').touched " class="help-block" style="color:red">
                   Please Enter Calories   (Greater than 0.1)</span>
            </div>
         
@@ -48,21 +48,21 @@
              <label for="category">Category:</label>
            </div>
            <div class="col-lg-4">
-             <select class="form-control" formControlName="catergoy_id" >
-              <option *ngFor="let category of categoryList" [ngValue]=workout.catergory_id>
-                {{category.categoryname}}
-              </option> 
-              <span *ngIf="!workoutForm.get('catergoy_id').valid && workoutForm.get('catergoy_id').touched " class="help-block" style="color:red">
-                 Please Select category</span>
-                          </select>
-                         
-           </div>
+            <select class="form-control" formControlName="categoryId" >
+             <option *ngFor="let category of categoryList" [ngValue]="category.categoryId">
+               {{category.categoryName}}
+             </option> 
+             <span *ngIf="!workoutForm.get('categoryId').valid && workoutForm.get('categoryId').touched " class="help-block" style="color:red">
+                Please Select category</span>
+                         </select>
+                        
+          </div>
          </div>
          <br>
              
          <div class="row">
              <div class="col-lg-3" style="padding-left:4%">
-                 <button style="width:90%" class="btn btn-success btn-lg "  type="submit"  [disabled]="!workoutForm.get('title').valid || !workoutForm.get('CBM').valid  || !workoutForm.get('note').valid" >
+                 <button style="width:90%" class="btn btn-success btn-lg "  type="submit"  [disabled]="!workoutForm.get('title').valid || !workoutForm.get('cbm').valid  || !workoutForm.get('note').valid" >
                     Update WorkOut
                     
                    </button>&nbsp;
