--- a/src/app/stop/stop.component.html
+++ b/src/app/stop/stop.component.html
@@ -12,7 +12,8 @@
                              <label for="title">Title:</label>
                          </div>
                          <div class="col-lg-3">
-                     <input type="text" readonly style="width:100%" class="form-contorl" [ngModel]="workout.title" id="title">
+                     <!-- <input type="text" readonly style="width:100%" class="form-contorl" [ngModel]="workout.title" id="title"> -->
+                       {{workouts.title}}
                          </div>
                        </div>
                  <br>
@@ -21,25 +22,26 @@
                                <label for="note">Note:</label>
                            </div>
                            <div class="col-lg-3">
-                       <textarea type="text" style="width: 100%;height: 126%;" readonly class="form-contorl" [ngModel]="workout.note" id="note"></textarea>
-                           </div>
+                       <!-- <textarea type="text" style="width: 100%;height: 126%;" readonly class="form-contorl" [ngModel]="workout.note" id="note"></textarea> -->
+                            {{workouts.note}}
+                    </div>
                          </div>
                  <br>
                          <div class="row">
                              <div class="col-lg-2">
-                                 <label for="end_date">End Date:</label>
+                                 <label for="endDate">End Date:</label>
                              </div>
                              <div class="col-lg-3">
-                         <input type="date" [value]="end_date" name="start_date" class="form-contorl" formControlName="start_date" id="end_date" >
+                         <input type="date" [value]="endDate" name="endDate" class="form-contorl" formControlName="endDate" id="endDate" >
                              </div>
                            </div>
                  <br>
                            <div class="row">
                              <div class="col-lg-2">
-                                 <label for="end_time">End Time</label>
+                                 <label for="endTime">End Time</label>
                              </div>
                              <div class="col-lg-3">
-                     <input type="time" class="form-control" formControlName="end_time" id="end_time" >
+                     <input type="time" class="form-control" formControlName="endTime" id="endTime" >
                              </div>
                            </div>
                  <br>
