--- a/src/app/track/track.component.html
+++ b/src/app/track/track.component.html
@@ -1,3 +1,80 @@
-<p>
-  track works!
-</p>
+<div class="container">
+     
+  <div class="row">
+    <div class="col-lg-3">
+      Workout Time of Day
+    </div>
+
+    <div class="clg-lg-2">
+      45
+    </div>
+    <div class="col-lg-2">
+      min
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-lg-3">
+      Workout Time of Week
+    </div>
+
+    <div class="clg-lg-2">
+      240
+    </div>
+    <div class="col-lg-2">
+      min
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-lg-3">
+      Workout Time of Month
+    </div>
+
+    <div class="clg-lg-2">
+      10000
+    </div>
+    <div class="col-lg-2">
+      min
+    </div>
+  </div>
+
+  
+  <div class="row">
+    <div class="col-lg-3">
+      Week Workout Total Calories Burnt
+    </div>
+
+    <div class="clg-lg-2">
+      10000
+    </div>
+  
+  </div>
+
+  
+  
+  <div class="row">
+    <div class="col-lg-3">
+     Month Workout Total Calories Burnt
+    </div>
+
+    <div class="clg-lg-2">
+      10000
+    </div>
+  
+  </div>
+
+  
+  
+  <div class="row">
+    <div class="col-lg-3">
+    Yearly  Workout Total Calories Burnt
+    </div>
+
+    <div class="clg-lg-2">
+      10000
+    </div>
+  
+  </div>
+
+</div>
