--- a/src/app/addcategory/addcategory.component.html
+++ b/src/app/addcategory/addcategory.component.html
@@ -18,21 +18,21 @@
     <br>
       <div class="row">
         <div class="col-lg-11">
-          <input  #inputcategory style="width:29%" placeholder="Add category">
+          <input  #inputcategory style="width:40%" placeholder="Add category">
           
         </div>
         <div class="col-lg-4 addicon">
           <img src="assets\plusicon.png" alt="add"  style="cursor:pointer" width="10%" (click)="addCategory(inputcategory.value); inputcategory.value=''">
-          <div class="small" *ngIf=check style="color:red;margin-left:-61%">Enter the Category name</div>
+          <div class="small" *ngIf=check style="color:red;margin-left:-120%;">Enter the Category name</div>
         </div>
         
      </div>
      <div style="padding-top:10px" class="row" *ngFor="let category of categoryList| filterCategory:value" >
        <div class="col-lg-8">
-          <input style= "width:29%"type="text" name="category" [(ngModel)]="category.categoryName" [readonly]= "!editableInput" name="" id="">
+          <input style= "width:38%"type="text" name="category" [(ngModel)]="category.categoryName" [readonly]= "!editableInput" name="" id="">
        </div>
        
-       <div class="col-lg-4" style="margin-left:-46%">
+       <div class="col-lg-4" style="margin-left:-41%">
           <button class="btn btn-default" (click)="editableInputs(category)">
             <span *ngIf="editableInput">UPDATE</span>
             <span *ngIf="!editableInput">EDIT</span>
