--- a/src/app/addworkout/addworkout.component.html
+++ b/src/app/addworkout/addworkout.component.html
@@ -9,7 +9,7 @@
    <div class="form-group">
 
       <div class="row">
-        <div class="col-lg-1"><label for="title">Title:</label></div>
+        <div class="col-lg-2"><label for="title">Title:</label></div>
         <div class="col-lg-4"><input type="text" class="form-control" formControlName="title" id="title">
           <span *ngIf="!workoutForm.get('title').valid && workoutForm.get('title').touched"
           class="help-block" style="color:red"> Please Enter Title Name (Minimum 5 Characters)</span>
@@ -18,7 +18,7 @@
       </div>
       <br>
       <div class="row">
-          <div class="col-lg-1">
+          <div class="col-lg-2">
             <label for="note">Note:</label>
           </div>
           <div class="col-lg-4">
@@ -35,16 +35,22 @@
             <label for="cbm">Calories Burnt Per Min</label>
           </div>
           <div class="col-lg-2 ">
-              <input type="number" class="form-control" step=0.1 formControlName="cbm" id="cbm">
+              <input type="number" class="form-control" step=0.1 [(ngModel)]="cbm" [value]='0.1' name="cbm"  formControlName="cbm" id="cbm">
               <span *ngIf="!workoutForm.get('cbm').valid && workoutForm.get('cbm').touched " class="help-block" style="color:red">
                  Please Enter Calories   (Greater than 0.1)</span>
+          </div>
+          <div class="col-lg-1">
+            <img src="assets/caloryplus.png" style="width: 63%;margin-left: -23px;padding-top: 2px" (click)="cbm=cbm+0.1" alt="Plus">
+          </div>
+          <div class="col-lg-1" >
+            <img src="assets/minus.png" style="width: 59%;margin-left:-62px;padding-top:2px;" (click)="cbm=cbm-0.1" alt="minus">
           </div>
        
         </div>
 <br>
         <div class="row">
 
-          <div class="col-lg-1">
+          <div class="col-lg-2">
             <label for="category">Category:</label>
           </div>
           <div class="col-lg-4">
@@ -61,8 +67,8 @@
         <br>
             
         <div class="row">
-            <div class="col-lg-3" style="padding-left:4%">
-                <button style="width:90%" class="btn btn-success btn-lg "  type="submit"  [disabled]="!workoutForm.get('title').valid || !workoutForm.get('cbm').valid  || !workoutForm.get('note').valid" >
+            <div class="col-lg-3" style="padding-left:5%">
+                <button style="width:100%" class="btn btn-success btn-lg "  type="submit"  [disabled]="!workoutForm.get('title').valid || !workoutForm.get('cbm').valid  || !workoutForm.get('note').valid" >
                    Add WorkOut
                    
                   </button>&nbsp;
