--- a/src/app/workouthome/workouthome.component.html
+++ b/src/app/workouthome/workouthome.component.html
@@ -5,7 +5,7 @@
       <input class="form-control font" #box (keyup.enter)="getworkouts(box.value)"  type="text" [(ngModel)]= "value"  name="value" placeholder="Search WorkOut"/>
     </div>
     <div class="col-lg-1">
-      <img  style="cursor: pointer;width:80%;margin-left: -135%;" (click)="getworkouts(value)" class="searchicon" src="assets/search.png">
+      <img  style="cursor: pointer;width: 76%;margin-left: -135%" (click)="getworkouts(value)" class="searchicon" src="assets/search.png">
    </div>
   </div>
   <div class="borderarea" *ngFor="let workout of workoutList|filter:value">
@@ -13,22 +13,22 @@
           <div class="row">
               <div class="col-lg-4">
                 
-                <input type="text" style="width:100%" readonly [(ngModel)]="workout.title" name="" id="">
+                <input type="text" style="width:387%" readonly [(ngModel)]="workout.title" name="" id="">
               </div>
              
             </div>
             <div class="row" style="padding-top:5px">
-                    <div class="col-lg-1">
-                        <button class="btn btn-primary" (click) ="editworkout(workout)" >Edit</button>
+                    <div class="col-lg-3">
+                        <button class="btn btn-primary " (click) ="editworkout(workout)" >Edit</button> 
                           </div>
-                          <div class="col-lg-1">
-                            <button class="btn btn-warning"(click)="deleteworkout(workout)">Delete</button>
+                          <div class="col-lg-3 ">
+                            <button class="btn btn-warning  "(click)="deleteworkout(workout)">Delete</button> 
                           </div>
-                          <div class="col-lg-1">
-                            <button class="btn btn-success" (click)="start(workout)">Start</button>
+                          <div class="col-lg-3">
+                            <button class="btn btn-success  " (click)="start(workout)" [disabled]="buttonflag">Start</button>
                           </div>
-                          <div class="col-lg-1">
-                            <button class="btn btn-default" (click)="end(workout)">End</button>
+                          <div class="col-lg-1 ">
+                            <button class="btn btn-default   " (click)="end(workout)" [disabled]="buttonflag" >End</button>
                           </div>
             
             </div>
