--- a/src/app/workouthome/workouthome.component.html
+++ b/src/app/workouthome/workouthome.component.html
@@ -1,41 +1,47 @@
-<div class="container" style="padding-top:20px">
-  <div class="row">
-    <div class="col-lg-4">
-      
-      <input class="form-control font" #box (keyup.enter)="getworkouts(box.value)"  type="text" [(ngModel)]= "value"  name="value" placeholder="Search WorkOut"/>
-    </div>
-    <div class="col-lg-1">
-      <img  style="cursor: pointer;width: 76%;margin-left: -135%" (click)="getworkouts(value)" class="searchicon" src="assets/search.png">
-   </div>
-  </div>
-  <div class="borderarea" *ngFor="let workout of workoutList|filter:value">
-      <div class="display"  >
-          <div class="row">
-              <div class="col-lg-4">
-                
-                <input type="text" style="width:387%" readonly [(ngModel)]="workout.title" name="" id="">
-              </div>
-             
-            </div>
-            <div class="row" style="padding-top:5px">
-                    <div class="col-lg-3">
-                        <button class="btn btn-primary " (click) ="editworkout(workout)" >Edit</button> 
-                          </div>
-                          <div class="col-lg-3 ">
-                            <button class="btn btn-warning  "(click)="deleteworkout(workout)">Delete</button> 
-                          </div>
-                          <div class="col-lg-3">
-                            <button class="btn btn-success  " (click)="start(workout)" [disabled]="buttonflag">Start</button>
-                          </div>
-                          <div class="col-lg-1 ">
-                            <button class="btn btn-default   " (click)="end(workout)" [disabled]="buttonflag" >End</button>
-                          </div>
-            
-            </div>
-       </div>
-       <br>
-  </div>
-  
-      
- </div>
+<div style="padding-left:36%">
 
+    <div class="container" style="padding-top:20px">
+        <div class="row">
+          <div class="col-lg-4">
+            
+            <input class="form-control font" #box (keyup.enter)="getworkouts(box.value)"  type="text" [(ngModel)]= "value"  name="value" placeholder="Search WorkOut" style="width:165%"/>
+          </div>
+          <div class="col-lg-1">
+            <img  style="cursor: pointer;width:193%;margin-left: 220%" (click)="getworkouts(value)" class="searchicon" src="assets/search.png">
+         </div>
+        </div>
+        <div class="borderarea" *ngFor="let workout of workoutList|filter:value| paginate: { itemsPerPage: 3, currentPage: p }">
+            <div class="display"  >
+                <div class="row">
+                    <div class="col-lg-4">
+                      
+                      <input type="text" style="width:387%" readonly [(ngModel)]="workout.title" name="" id="">
+                    </div>
+                   
+                  </div>
+                  <div class="row" style="padding-top:5px">
+                          <div class="col-lg-3">
+                              <button class="btn btn-primary " (click) ="editworkout(workout)" >Edit</button> 
+                                </div>
+                                <div class="col-lg-3 ">
+                                  <button class="btn btn-warning  "(click)="deleteworkout(workout)">Delete</button> 
+                                </div>
+                                <div class="col-lg-3">
+                                  <button class="btn btn-success  " (click)="start(workout)" [disabled]="buttonflag">Start</button>
+                                </div>
+                                <div class="col-lg-1 ">
+                                  <button class="btn btn-default   " (click)="end(workout)" [disabled]="buttonflag" >End</button>
+                                </div>
+                  
+                  </div>
+             </div>
+             <br>
+        </div>
+        <div class="pagination">
+            <pagination-controls (pageChange)="p = $event" autoHide="true"   ></pagination-controls>
+          </div>
+            
+       </div>
+      
+      
+</div>
