--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,19 +10,33 @@
   
 </div>
 
-
- <div class="container">
-  <div class="row">
-    
-    <ul class="nav nav-pills">
-        <li routerLinkActive="active"><a routerLink="/workouts">View All</a></li> &nbsp;&nbsp;&nbsp;
-        <li routerLinkActive="active"><a routerLink="/create">Create</a></li> &nbsp;&nbsp;&nbsp;
-       <li routerLinkActive="active"><a routerLink="/category">Category</a></li> &nbsp;&nbsp;&nbsp;
-      <li routerLinkActive="active"><a routerLink="/track">Track</a></li>
-    </ul>
-
-  </div>
+ <div style="padding-left:36%">
+    <div class="container">
+        <div class="row">
+          
+          <ul class="nav nav-pills">
+            <div class="col-lg-3">
+                <li routerLinkActive="active"><a routerLink="/workouts">ViewAll</a></li>
+            </div>
+            <div class="col-lg-3">
+                <li routerLinkActive="active"><a routerLink="/create">Create</a></li> 
+              </div>
+              <div class="col-lg-3">
+                  <li routerLinkActive="active"><a routerLink="/category">Category</a></li> 
+                </div>
+                <div class="col-lg-3">
+                    <li routerLinkActive="active"><a routerLink="/track">Track</a></li>
+                    
+                  </div>
+             
+             
+           
+          </ul>
+      
+        </div>
+       </div>
  </div>
+ 
    
 </div>
 <router-outlet></router-outlet>
