--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -13,7 +13,7 @@
                         </div>
                         <div class="col-lg-3">
                     <!-- <input type="text" readonly style="width:100%" class="form-contorl" [(ngModel)]=workouts.title id="title"> -->
-                            {{workouts.title}}
+                            {{workouts?.title}}
                 </div>
                       </div>
                 <br>
@@ -23,7 +23,7 @@
                           </div>
                           <div class="col-lg-3">
                       <!-- <textarea type="text" style="width: 100%;height: 126%;" readonly class="form-contorl" [(ngModel)]=workouts.note id="note"></textarea> -->
-                        {{workouts.note}}      
+                        {{workouts?.note}}      
                     </div>
                         </div>
                 <br>
@@ -33,7 +33,7 @@
                                 <label for="startDate">Start Date:</label>
                             </div>
                             <div class="col-lg-3">
-                        <input type="date"    [value]="startDate" name="startDate" class="form-contorl" formControlName="startDate" id="startDate" >
+                        <input type="date"    [value]="today|date:'yyyy-MM-dd'" name="startDate" class="form-contorl" formControlName="startDate" id="startDate" >
                             </div>
                           </div>
                 <br>
@@ -42,7 +42,7 @@
                                 <label for="startTime">Start Time</label>
                             </div>
                             <div class="col-lg-3">
-                    <input type="time" class="form-control" formControlName="startTime" >
+                    <input type="time" [value]="today|date:'shortTime'" class="form-control" formControlName="startTime" >
                             </div>
                           </div>
                 <br>
