--- a/src/app/stop/stop.component.html
+++ b/src/app/stop/stop.component.html
@@ -13,7 +13,7 @@
                          </div>
                          <div class="col-lg-3">
                      <!-- <input type="text" readonly style="width:100%" class="form-contorl" [ngModel]="workout.title" id="title"> -->
-                       {{workouts.title}}
+                       {{workouts?.title}}
                          </div>
                        </div>
                  <br>
@@ -23,7 +23,7 @@
                            </div>
                            <div class="col-lg-3">
                        <!-- <textarea type="text" style="width: 100%;height: 126%;" readonly class="form-contorl" [ngModel]="workout.note" id="note"></textarea> -->
-                            {{workouts.note}}
+                            {{workouts?.note}}
                     </div>
                          </div>
                  <br>
@@ -32,7 +32,7 @@
                                  <label for="endDate">End Date:</label>
                              </div>
                              <div class="col-lg-3">
-                         <input type="date" [value]="endDate" name="endDate" class="form-contorl" formControlName="endDate" id="endDate" >
+                         <input type="date" [value]="endDate|date:'yyyy-MM-dd'" name="endDate" class="form-contorl" formControlName="endDate" id="endDate" >
                              </div>
                            </div>
                  <br>
