--- a/src/app/addworkout/addworkout.component.html
+++ b/src/app/addworkout/addworkout.component.html
@@ -1,3 +1,5 @@
+<div style="padding-left:36%">
+  
 <div class="container" style="padding-top:20px">
    <h4> Add Workout</h4>
    
@@ -22,7 +24,7 @@
             <label for="note">Note:</label>
           </div>
           <div class="col-lg-4">
-            <textarea type="text" class="form-control" formControlName="note" id="note">
+            <textarea style="width:120%"  type="text" class="form-control" formControlName="note" id="note">
             </textarea>
             <span *ngIf="!workoutForm.get('note').valid && workoutForm.get('note').touched"
             class="help-block" style="color:red"> Please Enter Notes  (Minimum 5 Characters)</span>
@@ -32,18 +34,18 @@
         <div class="row">
 
           <div class="col-lg-3">
-            <label for="cbm">Calories Burnt Per Min</label>
+            <label for="cbm">CaloriesBurntPerMin</label>
           </div>
           <div class="col-lg-2 ">
-              <input type="number" class="form-control" step=0.1 [(ngModel)]="cbm" [value]='0.1' name="cbm"  formControlName="cbm" id="cbm">
-              <span *ngIf="!workoutForm.get('cbm').valid && workoutForm.get('cbm').touched " class="help-block" style="color:red">
-                 Please Enter Calories   (Greater than 0.1)</span>
+              <input type="number" class="form-control" step=0.1 [(ngModel)]="cbm"  name="cbm"  formControlName="cbm" id="cbm">
+              <span class="small" *ngIf="!workoutForm.get('cbm').valid && workoutForm.get('cbm').touched " class="help-block" style="color:red">
+                 Enter Calories>0.1</span>
           </div>
           <div class="col-lg-1">
-            <img src="assets/caloryplus.png" style="width: 63%;margin-left: -23px;padding-top: 2px" (click)="cbm=cbm+0.1" alt="Plus">
+            <img src="assets/caloryplus.png" style="width: 110%;margin-left: -2px;padding-top: 6px" (click)="cbm=cbm+0.1" alt="Plus">
           </div>
           <div class="col-lg-1" >
-            <img src="assets/minus.png" style="width: 59%;margin-left:-62px;padding-top:2px;" (click)="cbm=cbm-0.1" alt="minus">
+            <img src="assets/minus.png" style="width:114%;margin-left:-21px;padding-top:5px;" (click)="cbm=cbm-0.1" alt="minus">
           </div>
        
         </div>
@@ -54,7 +56,7 @@
             <label for="category">Category:</label>
           </div>
           <div class="col-lg-4">
-            <select class="form-control" formControlName="categoryId" >
+            <select style="width:120%" class="form-control" formControlName="categoryId" >
              <option *ngFor="let category of categoryList" [ngValue]="category.categoryId">
                {{category.categoryName}}
              </option> 
@@ -67,11 +69,11 @@
         <br>
             
         <div class="row">
-            <div class="col-lg-3" style="padding-left:5%">
-                <button style="width:100%" class="btn btn-success btn-lg "  type="submit"  [disabled]="!workoutForm.get('title').valid || !workoutForm.get('cbm').valid  || !workoutForm.get('note').valid" >
+            <div class="col-lg-3" style="margin-left:8%">
+                <button style="width:120%" class="btn btn-success btn-lg "  type="submit"  [disabled]="!workoutForm.get('title').valid || !workoutForm.get('cbm').valid  || !workoutForm.get('note').valid" >
                    Add WorkOut
                    
-                  </button>&nbsp;
+                  </button>&nbsp; &nbsp;
                  
              </div>
               <div class="col-lg-1">
@@ -84,3 +86,4 @@
   </form>
   </div>
 
+</div>
