--- a/src/app/addcategory/addcategory.component.html
+++ b/src/app/addcategory/addcategory.component.html
@@ -1,51 +1,55 @@
-  <div class="container" style="padding-top:20px">
-    <p>
-    Add Category
-  </p>
-  </div>
-    
-  
-   <div class="container" >
-    <div class="row">
-      <div class="col-lg-5">
-        
-        <input class="form-control font" #box (keyup.enter)="getcategory(box.value)"  type="text" [(ngModel)]= "value"  name="value" placeholder="Search Category"/>
-      </div>
-      <div class="col-lg-1">
-        <img  style="cursor: pointer;width:80%;margin-left: -135%;" (click)="getcategory(value)" class="searchicon" src="assets/search.png">
-     </div>
+  <div  style="padding-left:36%">
+    <div class="container" style="padding-top:20px">
+      <p>
+      Add Category
+    </p>
     </div>
-    <br>
-      <div class="row">
-        <div class="col-lg-11">
-          <input  #inputcategory style="width:40%" placeholder="Add category">
-          
-        </div>
-        <div class="col-lg-4 addicon">
-          <img src="assets\plusicon.png" alt="add"  style="cursor:pointer" width="10%" (click)="addCategory(inputcategory.value); inputcategory.value=''">
-          <div class="small" *ngIf=check style="color:red;margin-left:-120%;">Enter the Category name</div>
-        </div>
-        
-     </div>
-     <div style="padding-top:10px" class="row" *ngFor="let category of categoryList| filterCategory:value" >
-       <div class="col-lg-8">
-          <input style= "width:38%"type="text" name="category" [(ngModel)]="category.categoryName" [readonly]= "!editableInput" name="" id="">
-       </div>
-       
-       <div class="col-lg-4" style="margin-left:-41%">
-          <button class="btn btn-default" (click)="editableInputs(category)">
-            <span *ngIf="editableInput">UPDATE</span>
-            <span *ngIf="!editableInput">EDIT</span>
-          </button>&nbsp;
-          <button class="btn btn-default" (click)=" deleteCategory(category)">Delete</button>
-           
-         </div>
-     </div>
-          
-   
-     
-   </div>
-
-
-   
+      
     
+     <div class="container" >
+      <div class="row">
+        <div class="col-lg-5">
+          
+          <input class="form-control font" #box (keyup.enter)="getcategory(box.value)"  type="text" [(ngModel)]= "value"  name="value" placeholder="Search Category" style="width:120%"/>
+        </div>
+        <div class="col-lg-1">
+          <img  style="cursor: pointer;width:182%;margin-left: -108%;" (click)="getcategory(value)" class="searchicon" src="assets/search.png">
+       </div>
+      </div>
+      <br>
+        <div class="row">
+          <div class="col-lg-11">
+            <input  #inputcategory style="width:46%" placeholder="Add category">
+            
+          </div>
+          <div class="col-lg-4 addicon">
+            <img src="assets\plusicon.png" alt="add"  style="cursor:pointer" width="16%" (click)="addCategory(inputcategory.value); inputcategory.value=''">
+            <div class="small" *ngIf=check style="color:red;margin-left:-120%;">Enter the Category name</div>
+          </div>
+          
+       </div>
+       <div style="padding-top:10px" class="row" *ngFor="let category of categoryList| filterCategory:value" >
+         <div class="col-lg-8">
+            <input style= "width:38%"type="text" name="category" [(ngModel)]="category.categoryName" [readonly]= "!editableInput" name="" id="">
+         </div>
+         
+         <div class="col-lg-4" style="margin-left:-41%">
+            <button class="btn btn-default" (click)="editableInputs(category)">
+              <span *ngIf="editableInput">UPDATE</span>
+              <span *ngIf="!editableInput">EDIT</span>
+            </button>&nbsp;
+            <button class="btn btn-default" (click)=" deleteCategory(category)">Delete</button>
+             
+           </div>
+       </div>
+            
+     
+       
+     </div>
+  
+  
+     
+      
+  
+  </div>
+  
