--- a/src/app/stop/stop.component.html
+++ b/src/app/stop/stop.component.html
@@ -1,3 +1,4 @@
+<div style="padding-left:36%">
 <div class="container">
     <div style="padding-top:20px">
         <h4>End Workout</h4>
@@ -61,3 +62,4 @@
     
  </div>
  
+</div>
